force-app/main/default/objects/Corporate_Calling__c/fields/Have_you_hired_any_add_staff_sinc__c.field-meta.xml
<CustomField>
    <fullName>Have_you_hired_any_add_staff_sinc__c</fullName>
    <label>Have you hired any add. staff?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>