force-app/main/default/objects/Corporate_Calling__c/fields/Have_you_moved_to_a_larger_location_sinc__c.field-meta.xml
<CustomField>
    <fullName>Have_you_moved_to_a_larger_location_sinc__c</fullName>
    <label>Moved to larg. loc. since you eng. BR&amp;E?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>