force-app/main/default/objects/Corporate_Calling__c/fields/How_many_staff_hired__c.field-meta.xml
<CustomField>
    <fullName>How_many_staff_hired__c</fullName>
    <label>How many staff hired?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>