force-app/main/default/objects/Corporate_Calling__c/fields/Int_in_Strat_Bus_and_or_Trade_Allianc__c.field-meta.xml
<CustomField>
    <fullName>Int_in_Strat_Bus_and_or_Trade_Allianc__c</fullName>
    <label>Int. in Strat. Bus. and/or Trade Allianc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>