force-app/main/default/objects/Corporate_Calling__c/fields/Lease_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Lease_Expiry__c</fullName>
    <label>Lease Expiry</label>
    <type>Date</type>
</CustomField>