force-app/main/default/objects/Corporate_Calling__c/fields/Lease_or_Own__c.field-meta.xml
<CustomField>
    <fullName>Lease_or_Own__c</fullName>
    <label>Location Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accelerator</fullName>
            </value>
            <value>
                <fullName>Coworking Space</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Incubator</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Own</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>