force-app/main/default/objects/Corporate_Calling__c/fields/Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Notes__c</fullName>
    <label>Meeting Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>