force-app/main/default/objects/Corporate_Calling__c/fields/Number_of_Full_Time_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Full_Time_Employees__c</fullName>
    <label>Employment-Full-Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>