force-app/main/default/objects/Corporate_Calling__c/fields/Other_Business_Sector__c.field-meta.xml
<CustomField>
    <fullName>Other_Business_Sector__c</fullName>
    <label>Other(Business Sector)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>