force-app/main/default/objects/Corporate_Calling__c/fields/Other_issues__c.field-meta.xml
<CustomField>
    <fullName>Other_issues__c</fullName>
    <label>Other issues:</label>
    <type>TextArea</type>
</CustomField>