force-app/main/default/objects/Corporate_Calling__c/fields/OtherPhone__c.field-meta.xml
<CustomField>
    <fullName>OtherPhone__c</fullName>
    <formula>Contact__r.OtherPhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Phone</label>
    <type>Text</type>
</CustomField>