force-app/main/default/objects/Corporate_Calling__c/fields/Parent_Comp_Postal_Code_f__c.field-meta.xml
<CustomField>
    <fullName>Parent_Comp_Postal_Code_f__c</fullName>
    <formula>Parent_Company__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code</label>
    <type>Text</type>
</CustomField>