force-app/main/default/objects/Corporate_Calling__c/fields/Parent_Comp_Street_Num__c.field-meta.xml
<CustomField>
    <fullName>Parent_Comp_Street_Num__c</fullName>
    <formula>Parent_Company__r.Billing_street_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street Number</label>
    <type>Text</type>
</CustomField>