force-app/main/default/objects/Corporate_Calling__c/fields/Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporate Callings (Parent Company)</relationshipLabel>
    <relationshipName>Corporate_Callings1</relationshipName>
    <type>Lookup</type>
</CustomField>