force-app/main/default/objects/Corporate_Calling__c/fields/Parent_Company_Country_f__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company_Country_f__c</fullName>
    <formula>Parent_Company__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>