force-app/main/default/objects/Corporate_Calling__c/fields/Parent_Company_Province__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company_Province__c</fullName>
    <label>Parent Company Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>