force-app/main/default/objects/Corporate_Calling__c/fields/Parent_Company_Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company_Street_Name__c</fullName>
    <label>Parent Company Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>