force-app/main/default/objects/Corporate_Calling__c/fields/Parent_Company_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company_Street_Number__c</fullName>
    <label>Parent Company Street Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>