force-app/main/default/objects/Corporate_Calling__c/fields/Parent_Company_Suite_Unit__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company_Suite_Unit__c</fullName>
    <label>Parent Company Suite / Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>