force-app/main/default/objects/Corporate_Calling__c/fields/Phone_1_Direct__c.field-meta.xml
<CustomField>
    <fullName>Phone_1_Direct__c</fullName>
    <formula>Contact__r.Direct_phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone 1 - Direct</label>
    <type>Text</type>
</CustomField>