force-app/main/default/objects/Corporate_Calling__c/fields/Phone_2_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Phone_2_Mobile__c</fullName>
    <formula>Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>