force-app/main/default/objects/Corporate_Calling__c/fields/Phone_3__c.field-meta.xml
<CustomField>
    <fullName>Phone_3__c</fullName>
    <formula>Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main</label>
    <type>Text</type>
</CustomField>