force-app/main/default/objects/Corporate_Calling__c/fields/Please_describe__c.field-meta.xml
<CustomField>
    <fullName>Please_describe__c</fullName>
    <label>Please describe</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>