force-app/main/default/objects/Corporate_Calling__c/fields/Please_tell_us_where_we_can_improve__c.field-meta.xml
<CustomField>
    <fullName>Please_tell_us_where_we_can_improve__c</fullName>
    <label>Please tell us where we can improve?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>