force-app/main/default/objects/Corporate_Calling__c/fields/Positive_Testimonial__c.field-meta.xml
<CustomField>
    <fullName>Positive_Testimonial__c</fullName>
    <label>Positive Testimonial</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>