force-app/main/default/objects/Corporate_Calling__c/fields/Primary_Activity_Customer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Activity_Customer__c</fullName>
    <label>Primary Activity/Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>