force-app/main/default/objects/Corporate_Calling__c/fields/Programs_Currently_Used_City_of_Toront__c.field-meta.xml
<CustomField>
    <fullName>Programs_Currently_Used_City_of_Toront__c</fullName>
    <label>Programs Currently Used – City of Toront</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BIC Program</fullName>
            </value>
            <value>
                <fullName>EDC Culture</fullName>
            </value>
            <value>
                <fullName>Gold Star</fullName>
            </value>
            <value>
                <fullName>IMIT</fullName>
            </value>
            <value>
                <fullName>Vacant Tax Rebate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>