force-app/main/default/objects/Corporate_Calling__c/fields/Programs_Currently_Used_Energy_Efficie__c.field-meta.xml
<CustomField>
    <fullName>Programs_Currently_Used_Energy_Efficie__c</fullName>
    <label>Programs Current. Used Energy Efficiency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Better Building Partnership</fullName>
            </value>
            <value>
                <fullName>Eco-Roof Incentive</fullName>
            </value>
            <value>
                <fullName>Enbridge</fullName>
            </value>
            <value>
                <fullName>NRCan</fullName>
            </value>
            <value>
                <fullName>OPA FIT</fullName>
            </value>
            <value>
                <fullName>Partners In Project Green</fullName>
            </value>
            <value>
                <fullName>Toronto Hydro</fullName>
            </value>
            <value>
                <fullName>Toronto Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>