force-app/main/default/objects/Corporate_Calling__c/fields/Programs_Currently_Used_Financial__c.field-meta.xml
<CustomField>
    <fullName>Programs_Currently_Used_Financial__c</fullName>
    <label>Programs Currently Used – Financial</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BDC</fullName>
            </value>
            <value>
                <fullName>CBN</fullName>
            </value>
            <value>
                <fullName>Futurpreneur</fullName>
            </value>
            <value>
                <fullName>CME SMART</fullName>
            </value>
            <value>
                <fullName>Global Commerce Support Program</fullName>
            </value>
            <value>
                <fullName>SDTC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>