force-app/main/default/objects/Corporate_Calling__c/fields/Programs_Currently_Used_HR__c.field-meta.xml
<CustomField>
    <fullName>Programs_Currently_Used_HR__c</fullName>
    <label>Programs Currently Used – HR</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yves Landry Foundation</fullName>
            </value>
            <value>
                <fullName>Apprenticeship Training – Tax Credit</fullName>
            </value>
            <value>
                <fullName>Canada Ontario Job Grant</fullName>
            </value>
            <value>
                <fullName>PAYE</fullName>
            </value>
            <value>
                <fullName>Private Services</fullName>
            </value>
            <value>
                <fullName>Employment Ontario</fullName>
            </value>
            <value>
                <fullName>Summer Jobs Service</fullName>
            </value>
            <value>
                <fullName>Temporary Foreign Workers Program</fullName>
            </value>
            <value>
                <fullName>TESS</fullName>
            </value>
            <value>
                <fullName>Youth Employment Fund</fullName>
            </value>
            <value>
                <fullName>Youth Employment Partnership</fullName>
            </value>
            <value>
                <fullName>Youth Employment Program – IRAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>