force-app/main/default/objects/Corporate_Calling__c/fields/Programs_of_Interest_Exporting__c.field-meta.xml
<CustomField>
    <fullName>Programs_of_Interest_Exporting__c</fullName>
    <label>Programs of Interest – Exporting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CoT - Toronto Export Assistance</fullName>
            </value>
            <value>
                <fullName>EDC – Export Assistance</fullName>
            </value>
            <value>
                <fullName>Ont - Export Market Access</fullName>
            </value>
            <value>
                <fullName>TRBOT – Export Program</fullName>
            </value>
            <value>
                <fullName>CBN - New Exporters to Border States</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>