force-app/main/default/objects/Corporate_Calling__c/fields/Programs_of_Interest_R_D__c.field-meta.xml
<CustomField>
    <fullName>Programs_of_Interest_R_D__c</fullName>
    <label>Programs of Interest – R&amp;D</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FedDev Ontario</fullName>
            </value>
            <value>
                <fullName>IRAP</fullName>
            </value>
            <value>
                <fullName>TVP</fullName>
            </value>
            <value>
                <fullName>MRI</fullName>
            </value>
            <value>
                <fullName>Mitacs</fullName>
            </value>
            <value>
                <fullName>NSERC</fullName>
            </value>
            <value>
                <fullName>OCE</fullName>
            </value>
            <value>
                <fullName>OMAFRA</fullName>
            </value>
            <value>
                <fullName>SR&amp;ED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>