force-app/main/default/objects/Corporate_Calling__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <defaultValue>&#39;Ontario&#39;</defaultValue>
    <label>Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>