force-app/main/default/objects/Corporate_Calling__c/fields/Province_f__c.field-meta.xml
<CustomField>
    <fullName>Province_f__c</fullName>
    <formula>Account__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Province</label>
    <type>Text</type>
</CustomField>