force-app/main/default/objects/Corporate_Calling__c/fields/Rate_the_service_and_inf_rec_from_BR_E__c.field-meta.xml
<CustomField>
    <fullName>Rate_the_service_and_inf_rec_from_BR_E__c</fullName>
    <label>Rate the service and inf. rec. from BR&amp;E</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highly Effective</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Ineffective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>