force-app/main/default/objects/Corporate_Calling__c/fields/Referred_to_Client_by__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_Client_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred to Client by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Corporate Callings (Referred to Client by)</relationshipLabel>
    <relationshipName>Corporate_Callings1</relationshipName>
    <type>Lookup</type>
</CustomField>