force-app/main/default/objects/Corporate_Calling__c/fields/Send_client_follow_up__c.field-meta.xml
<CustomField>
    <fullName>Send_client_follow_up__c</fullName>
    <label>Send client follow-up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>