force-app/main/default/objects/Corporate_Calling__c/fields/Send_client_satisfaction_survey__c.field-meta.xml
<CustomField>
    <fullName>Send_client_satisfaction_survey__c</fullName>
    <label>Send client satisfaction survey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>