force-app/main/default/objects/Corporate_Calling__c/fields/Send_pre_interview_questions__c.field-meta.xml
<CustomField>
    <fullName>Send_pre_interview_questions__c</fullName>
    <label>Send pre-interview questions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>